# app/validators/tour_validator.ts
@@ -1,16 +1,25 @@
 import vine from '@vinejs/vine'
+import { DateTime } from 'luxon'
 
 const name = vine.string().trim().minLength(1).maxLength(255)
-
+const description = vine.string().optional()
+const startDate = vine.date({ formats: ['YYYY/DD/MM'] }).transform((d) => DateTime.fromJSDate(d))
+const endDate = vine.date({ formats: ['YYYY/DD/MM'] }).transform((d) => DateTime.fromJSDate(d))
 export const createTourValidator = vine.compile(
   vine.object({
     name: name,
+    description,
+    startDate,
+    endDate,
   })
 )
 
 export const updateTourValidator = vine.compile(
   vine.object({
     name: name.optional(),
+    description,
+    startDate,
+    endDate,
   })
 )
 
@@ -45,5 +54,23 @@ export const updateTourUserValidator = vine.compile(
     childCost,
     childGst,
     discountAmount,
+  })
+)
+
+export const tourFilterValidator = vine.compile(
+  vine.object({
+    query: vine.string().optional(),
+    sortBy: vine
+      .enum(['start', 'end'])
+      .optional()
+      .transform((val) => (val ? val : 'start')),
+    order: vine
+      .enum(['asc', 'desc'])
+      .optional()
+      .transform((val) => (val ? val : 'asc')),
+    start: vine.date({ formats: ['YYYY/MM/DD'] }).optional(),
+    // .transform((v) => (v ? DateTime.fromJSDate(v) : undefined)),
+    end: vine.date({ formats: ['YYYY/MM/DD'] }).optional(),
+    // .transform((v) => (v ? DateTime.fromJSDate(v) : undefined)),
   })
 )
