# swagger.json
@@ -105,7 +105,11 @@
             "headers": {}
           }
         },
-        "security": []
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
       }
     },
     "/api/auth/logout": {
@@ -145,7 +149,11 @@
             "headers": {}
           }
         },
-        "security": []
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
       }
     },
     "/api/auth/me": {
@@ -204,7 +212,11 @@
             "headers": {}
           }
         },
-        "security": []
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
       }
     },
     "/api/vouchers": {
@@ -724,7 +736,66 @@
         "deprecated": false,
         "description": "",
         "tags": ["Tours", "Tours"],
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "query",
+            "in": "query",
+            "description": "",
+            "required": false,
+            "example": "dar",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "sortBy",
+            "in": "query",
+            "description": "",
+            "required": false,
+            "example": "start",
+            "schema": {
+              "type": "string",
+              "enum": ["start", "end"],
+              "default": "start"
+            }
+          },
+          {
+            "name": "order",
+            "in": "query",
+            "description": "",
+            "required": false,
+            "example": "asc",
+            "schema": {
+              "type": "string",
+              "enum": ["asc", "desc"],
+              "default": "asc"
+            }
+          },
+          {
+            "name": "start",
+            "in": "query",
+            "description": "",
+            "required": false,
+            "example": "2025/12/23",
+            "schema": {
+              "type": "string",
+              "pattern": "^(?:(?:(?:19|20)\\d{2})\\/(?:(?:0?[1-9]|[12][0-9]|3[01]))\\/(?:(?:0?[13578]|1[02]))|(?:(?:19|20)\\d{2})\\/(?:(?:0?[1-9]|[12][0-9]|30))\\/(?:(?:0?[469]|11))|(?:(?:19|20)(?:[02468][048]|[13579][26]))\\/29\\/0?2|(?:(?:19|20)(?:[0-9]{2}))\\/(?:(?:0?[1-9]|1[0-9]|2[0-8]))\\/0?2)$",
+              "format": "date"
+            }
+          },
+          {
+            "name": "end",
+            "in": "query",
+            "description": "",
+            "required": false,
+            "example": "2026/01/23",
+            "schema": {
+              "type": "string",
+              "format": "date",
+              "pattern": "^(?:(?:(?:19|20)\\d{2})\\/(?:(?:0?[1-9]|[12][0-9]|3[01]))\\/(?:(?:0?[13578]|1[02]))|(?:(?:19|20)\\d{2})\\/(?:(?:0?[1-9]|[12][0-9]|30))\\/(?:(?:0?[469]|11))|(?:(?:19|20)(?:[02468][048]|[13579][26]))\\/29\\/0?2|(?:(?:19|20)(?:[0-9]{2}))\\/(?:(?:0?[1-9]|1[0-9]|2[0-8]))\\/0?2)$"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "",
@@ -802,11 +873,28 @@
             "application/json": {
               "schema": {
                 "type": "object",
-                "properties": {}
+                "properties": {
+                  "name": {
+                    "type": "string"
+                  },
+                  "description": {
+                    "type": "string"
+                  },
+                  "startDate": {
+                    "type": "string",
+                    "format": "date",
+                    "pattern": "^(?:(?:(?:19|20)\\d{2})\\/(?:(?:0?[1-9]|[12][0-9]|3[01]))\\/(?:(?:0?[13578]|1[02]))|(?:(?:19|20)\\d{2})\\/(?:(?:0?[1-9]|[12][0-9]|30))\\/(?:(?:0?[469]|11))|(?:(?:19|20)(?:[02468][048]|[13579][26]))\\/29\\/0?2|(?:(?:19|20)(?:[0-9]{2}))\\/(?:(?:0?[1-9]|1[0-9]|2[0-8]))\\/0?2)$",
+                    "examples": ["2025/23/12"]
+                  },
+                  "endDate": {
+                    "type": "string",
+                    "pattern": "^(?:(?:(?:19|20)\\d{2})\\/(?:(?:0?[1-9]|[12][0-9]|3[01]))\\/(?:(?:0?[13578]|1[02]))|(?:(?:19|20)\\d{2})\\/(?:(?:0?[1-9]|[12][0-9]|30))\\/(?:(?:0?[469]|11))|(?:(?:19|20)(?:[02468][048]|[13579][26]))\\/29\\/0?2|(?:(?:19|20)(?:[0-9]{2}))\\/(?:(?:0?[1-9]|1[0-9]|2[0-8]))\\/0?2)$",
+                    "format": "date"
+                  }
+                },
+                "required": ["name", "startDate", "endDate"]
               },
-              "example": {
-                "name": "Darjeeling may 2026"
-              }
+              "examples": {}
             }
           },
           "required": true
@@ -827,16 +915,6 @@
                     }
                   },
                   "required": ["message", "data"]
-                },
-                "example": {
-                  "message": "Tour created successfully.",
-                  "data": {
-                    "name": "Darjeeling may 2026",
-                    "id": "i2e0venc1qwzjsraaeii4jcz",
-                    "createdAt": "2025-11-04T11:29:12.192+05:30",
-                    "updatedAt": "2025-11-04T11:29:12.192+05:30",
-                    "usersCount": null
-                  }
                 }
               }
             },
@@ -854,6 +932,17 @@
                     }
                   },
                   "required": ["message"]
+                }
+              }
+            },
+            "headers": {}
+          },
+          "422": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ValidationError"
                 }
               }
             },
@@ -2374,6 +2463,17 @@
           "name": {
             "type": "string"
           },
+          "description": {
+            "type": ["string", "null"]
+          },
+          "startDate": {
+            "type": "string",
+            "format": "date"
+          },
+          "endDate": {
+            "type": "string",
+            "format": "date"
+          },
           "createdAt": {
             "type": "string",
             "format": "date-time"
@@ -2386,7 +2486,7 @@
             "type": "integer"
           }
         },
-        "required": ["name", "id", "createdAt", "updatedAt", "usersCount"]
+        "required": ["name", "startDate", "endDate", "id", "createdAt", "updatedAt", "usersCount"]
       },
       "User": {
         "type": "object",
